<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.study.stuart.studyhelper.Main"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/assignments_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/list"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/button_label_margin"
                android:background="#99FFFFFF"
                android:text="@string/assignments_label"
                android:textColor="@color/button_label_colour"
                android:textSize="@dimen/button_label_size" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/commitments_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/agenda"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/button_label_margin"
                android:background="#99FFFFFF"
                android:text="@string/commitments_label"
                android:textColor="@color/button_label_colour"
                android:textSize="@dimen/button_label_size" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/todo_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/post_its"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/button_label_margin"
                android:background="#99FFFFFF"
                android:text="@string/todo_label"
                android:textColor="@color/button_label_colour"
                android:textSize="@dimen/button_label_size" />


        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/exams_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/paper"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/button_label_margin"
                android:background="#99FFFFFF"
                android:text="@string/exams_label"
                android:textColor="@color/button_label_colour"
                android:textSize="@dimen/button_label_size" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/calendar_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/calendar"
                android:scaleType="fitCenter"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/button_label_margin"
                android:background="#99FFFFFF"
                android:text="@string/calendar_label"
                android:textColor="@color/button_label_colour"
                android:textSize="@dimen/button_label_size" />


        </RelativeLayout>

        <ImageButton
            android:id="@+id/new_button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/plus"
            android:scaleType="fitCenter" />

    </LinearLayout>

</LinearLayout>
